--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
+    "@nuxt/content": "^1.14.0",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
