--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,8 +2,10 @@ backend:
   name: git-gateway
   branch: vue-refactor
 
+# local_backend: true
+
 media_folder: static/uploads
-# public_folder: /img
+public_folder: /uploads
 
 i18n:
   # Required and can be one of multiple_folders, multiple_files or single_file
@@ -23,29 +25,25 @@ collections:
   - name: 'pages'
     label: 'Pages'
     i18n:
-      structure: single_file
-    files:
-      - name: about
-        label: About Page
-        i18n: true
-        file: content/home.md
-        format: 'frontmatter'
-        fields:
-          - { label: Title, name: title, widget: string }
-          - { label: Lead in, name: leadIn, widget: string }
-          # - { label: Images, name: images, widget: image }
-          - {
-              label: 'Images',
-              name: 'images',
-              widget: 'list',
-              required: false,
-              field: { label: 'Image', name: 'image', widget: 'image' },
-            }
-          - { label: 'Body', name: 'body', widget: 'markdown' }
+      structure: multiple_files
+    folder: 'content/pages'
+    delete: false
+    fields:
+      - { label: Title, name: title, widget: string, i18n: true }
+      - { label: Lead in, name: leadIn, widget: string, i18n: true }
+      - {
+          label: 'Images',
+          name: 'images',
+          widget: 'list',
+          required: false,
+          field: { label: 'Image', name: 'image', widget: 'image' },
+        }
+      - { label: 'Body', name: 'body', widget: 'markdown', i18n: true }
 
   - name: 'tabs'
     label: 'Tabs'
-    i18n: true
+    i18n:
+      structure: multiple_folders
     folder: 'content/tabs'
     format: 'frontmatter'
     create: true
@@ -54,21 +52,23 @@ collections:
       preview: true
     fields:
       - { label: 'Order Position', name: 'position', widget: 'number' }
-      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Title', name: 'title', widget: 'string', i18n: true }
       - {
-          label: 'Media Type',
-          name: 'media_type',
-          widget: 'select',
-          options: ['image', 'video'],
-          default: 'image',
-        }
-      - {
-          label: 'Media String',
-          name: 'media_src',
-          widget: 'string',
+          label: 'Image',
+          name: 'imageSrc',
+          widget: 'image',
+          allow_multiple: false,
           required: false,
         }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+      - {
+          label: 'Video Source',
+          name: 'iframeSrc',
+          widget: 'string',
+          required: false,
+          i18n: true,
+          hint: Supplying a video source will hide the image,
+        }
+      - { label: 'Body', name: 'body', widget: 'markdown', i18n: true }
 
   - name: 'partners'
     label: 'Partners'
@@ -82,5 +82,5 @@ collections:
     fields:
       - { label: 'Order Position', name: 'position', widget: 'number' }
       - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Logo', name: 'image', widget: 'image', allow_multiple: false }
+      - { label: 'Logo', name: 'logo', widget: 'image', allow_multiple: false }
       - { label: 'URL', name: 'url', widget: 'string' }
